codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__mcp_login_tests__mcp_login_switched_thread_true.snap
---
source: tui/src/app/tests/mcp_login_tests.rs
expression: next_history_message(&mut events)
---
• Signed in to enterprise.
