codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__mcp_login_tests__overlapping_mcp_login.snap
---
source: tui/src/app/tests/mcp_login_tests.rs
expression: next_history_message(&mut events)
---
• MCP sign-in is starting. Wait for it to finish before trying again.
