codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__mcp_login_tests__rejected_mcp_login_retry.snap
---
source: tui/src/app/tests/mcp_login_tests.rs
expression: "messages.join(\"\\n\")"
---
• Signed in to enterprise.
■ Unknown MCP server typo
